# stereowrap

./: .gitignore  CMakeLists.txt  Makefile  README  stereowrap  test_locally.sh
arduino/: ShutterGlasses.fz
arduino/ShutterGlasses/: ShutterGlasses.pde
arduino_tiny/ShutterGlasses/: ShutterGlasses.ino
attiny/: CMakeLists.txt  ShutterGlasses.c  ShutterGlasses.cpp  ShutterGlasses.fz  avr_crosscompile.cmake  compile_and_flash.sh  uart.c  uart.h
src/: stereo.c
