CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(stereowrap)
SET(CMAKE_MODULE_PATH ${stereowrap_SOURCE_DIR})
SET(stereowrap_MAIN_DIR ${stereowrap_SOURCE_DIR})

SET(VERSION_SERIES 1)
SET(VERSION_MAJOR 0)
SET(SOVERSION 1)

FIND_PACKAGE(OpenGL    REQUIRED)
FIND_PACKAGE(Threads   REQUIRED)

ADD_DEFINITIONS(-D_GNU_SOURCE)

ADD_LIBRARY(stereowrap SHARED
	src/stereo.c
)
TARGET_LINK_LIBRARIES(stereowrap 
	${OPENGL_LIBRARIES} 
	${CMAKE_THREAD_LIBS_INIT}
)

SET_TARGET_PROPERTIES(
    stereowrap
  PROPERTIES
    VERSION ${VERSION_SERIES}.${VERSION_MAJOR}
    SOVERSION ${SOVERSION}
    DEBUG_POSTFIX "d"
)


INSTALL(TARGETS stereowrap DESTINATION lib LIBRARY DESTINATION lib)


